--- a/apps/cash-register/public/styles.css
+++ b/apps/cash-register/public/styles.css
@@ -49,10 +49,15 @@ h1 {
 
 .input-div {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   margin: 10px 0 20px;
+}
+
+label {
+  font-size: 18px;
 }
 
 .user-input {
@@ -60,10 +65,6 @@ h1 {
   padding: 10px;
   margin: 10px;
   font-size: 15px;
-}
-
-.change-title {
-  font-weight: bold;
 }
 
 .price-screen {
@@ -100,18 +101,18 @@ h1 {
   padding-top: 20px;
   background-color: #99c9ff;
   height: 250px;
-  width: 350px;
+  width: 325px;
 }
 
 .btns-container {
-  width: 30%;
+  width: 25%;
 }
 
 .btn {
   border-radius: 10%;
   border: none;
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   background-color: black;
 }
 
@@ -129,10 +130,10 @@ h1 {
   border-width: 3px;
 }
 
-.results {
+.cash-drawer-display {
   font-size: 1.1rem;
   background-color: white;
-  width: 50%;
+  width: 55%;
   height: 95%;
   color: black;
   padding: 10px;
@@ -141,7 +142,7 @@ h1 {
 .bottom-register {
   background-color: #99c9ff;
   height: 50px;
-  width: 400px;
+  width: 325px;
   margin-top: 10px;
 }
 
