--- a/apps/roman-numeral-converter/public/styles.css
+++ b/apps/roman-numeral-converter/public/styles.css
@@ -5,6 +5,7 @@
   --gray-75: #3b3b4f;
   --gray-85: #1b1b32;
   --gray-90: #0a0a23;
+  --blue-50: #198eee;
   --error: #a94442;
   --danger-color: #850000;
   --danger-background: #ffadad;
@@ -71,6 +72,11 @@ label {
   font-weight: bold;
 }
 
+input:focus-visible,
+button:focus-visible {
+  outline: 3px solid var(--blue-50);
+}
+
 input {
   display: block;
   font-size: 2.5rem;
@@ -82,12 +88,9 @@ input {
   color: white;
   background-color: var(--gray-90);
   border: 1px solid var(--gray-05);
-  outline: none;
-  outline-style: none;
 }
 
 button {
-  outline: none;
   cursor: pointer;
   margin-top: 15px;
   text-decoration: none;
