--- a/apps/live-search/public/styles.css
+++ b/apps/live-search/public/styles.css
@@ -1,12 +1,67 @@
-#search-container {
-  width: 300px;
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
+}
+
+body {
+  font-family: Lato, sans-serif;
+  background-color: #0a0a23;
+}
+
+main {
   margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-.result-item {
-  cursor: pointer;
-  padding: 5px;
-  border-bottom: 1px solid #ddd;
+
+h1,
+h2,
+h3,
+p,
+code,
+pre,
+ul {
+  color: #fff;
 }
-.result-item:hover {
-  background-color: #f0f0f0;
+
+.usage {
+  padding: 15px;
+  background-color: #0a0a23;
+  max-width: 95%;
+  border: 1px solid #fff;
+}
+
+p {
+  margin-bottom: 1em;
+  line-height: 1.5rem;
+}
+
+code {
+  padding: 1px 4px;
+  overflow-wrap: anywhere;
+  background-color: #3b3b4f;
+  color: #dfdfe2;
+}
+
+ul {
+  margin: 1em;
+  padding-left: 20px;
+}
+
+li {
+  margin-bottom: 0.5em;
+}
+
+@media (min-width: 768px) {
+  .usage {
+    max-width: 70%;
+  }
 }
